crates/mineral-tui/src/components/snapshots/mineral_tui__components__transport__tests__transport_cjk_title_snapshot.snap
---
source: crates/mineral-tui/src/components/transport.rs
description: "播放栏:CJK 长歌名(地球上最后一个EMO男孩,中英混排)"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────╮"
"│              地球上最后一个EMO男孩             │" Hidden by multi-width symbols: [(16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (33, " "), (35, " ")]
"│                        ·                       │"
"│ 1:00 ━━━━━━━━━●────────────────────────── 4:00 │"
"│              [⏮]   [⏸]   [⏭]   [→]             │"
"│               p     ␣     n     m              │"
"│ vol ██████████ 100%   │   mode seq   │   fmt — │"
"╰────────────────────────────────────────────────╯"
