crates/mineral-tui/src/components/snapshots/mineral_tui__components__transport__tests__transport_no_track_snapshot.snap
---
source: crates/mineral-tui/src/components/transport.rs
description: "播放栏:无曲目空态"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────╮"
"│                        —                       │"
"│                        ·                       │"
"│ 0:00 ●─────────────────────────────────── 0:00 │"
"│              [⏮]   [▶]   [⏭]   [→]             │"
"│               p     ␣     n     m              │"
"│ vol ██████████ 100%   │   mode seq   │   fmt — │"
"╰────────────────────────────────────────────────╯"
